Anchor fix, no animation on mobile

--- a/big.css
+++ b/big.css
@@ -1,4 +1,5 @@
-body {margin-top: 40px;
+body {
+	margin-top: 40px;
 	font-size: 100%;}
 #MobileBar {display: none;}
 #Modal {
