--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ body {
     z-index:100;
     top: 0px;
     left: 0px;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     background: #000;
     display: none;}
 #Modal {
@@ -136,7 +136,7 @@ body {
 	display: block;
 	border: 0px;
 	margin-top: -20px;
-	width: 100%; height: 50px;}
+	width: 100%; height: 49px;}
 .CodeBar, #CodePage {background-color: #27ae60;}
 .SchoolBar, #SchoolPage {background-color: #f39c12;}
 .MusicBar, #MusicPage {background-color: #2980b9;}
