--- a/mediumretina.css
+++ b/mediumretina.css
@@ -1,7 +1,6 @@
 body {font-size: 200%;}
 
-#Modal {
-	font-size: 0.75em;}
+#Modal {font-size: 0.75em;}
 
 #IntroHead {margin-top: 20%;}
 #topart {
